--- a/app/src/main/res/layout/activity_installer.xml
+++ b/app/src/main/res/layout/activity_installer.xml
@@ -10,7 +10,7 @@
   <ImageView
       android:id="@+id/imageView"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="fill_parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
       style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
       android:layout_width="333dp"
       android:layout_height="217dp"
-      android:progress="25"
+      android:progress="0"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fontFamily="@font/orion_regular"
-      android:text="25"
+      android:text="0"
       android:textColor="@color/white"
       android:textColorLink="@color/teal_200"
       android:textSize="96sp"
