V 0.04 - implementation navigation - minor fix

--- a/app/src/main/res/layout/installer.xml
+++ b/app/src/main/res/layout/installer.xml
@@ -10,12 +10,12 @@
   <ImageView
       android:id="@+id/imageView"
       android:layout_width="wrap_content"
-      android:layout_height="fill_parent"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:srcCompat="@drawable/background_menu" />
+      app:srcCompat="@drawable/background_menu"
+      android:scaleType="fitXY" />
+
 
   <ProgressBar
       android:id="@+id/progressBar"
