--- a/app/src/main/res/layout/installer.xml
+++ b/app/src/main/res/layout/installer.xml
@@ -5,10 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".installer">
+    tools:context=".home.Installer">
 
   <ImageView
-      android:id="@+id/imageView"
+      android:id="@+id/installer_background"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
